large commit, huj znaet shto tut

--- a/application/modules/admin/views/scripts/comments/index.phtml
+++ b/application/modules/admin/views/scripts/comments/index.phtml
@@ -37,13 +37,21 @@
 function removeComment(id){
     $('#button'+id).hide();
     $('#prel'+id).show();
-    $.ajax({
-    type: 'POST',
-    url: '<?= $this->baseUrl.'/admin/comments/remove-comment/'; ?>',
-    data: {id: id},
-    success: function(){
-        $('#div'+id).remove();
+     
+    if(confirm('Удалить комментарий')){
+            $.ajax({
+            type: 'POST',
+            url: '<?= $this->baseUrl.'/admin/comments/remove-comment/'; ?>',
+            data: {id: id},
+            success: function(){
+                $('#div'+id).remove();
+            }
+          });
+    }else{
+        $('#prel'+id).hide();
+        $('#button'+id).show();
+        
     }
-  });
+
 }
 </script>
