--- a/application/modules/performer/views/scripts/index/task-view.phtml
+++ b/application/modules/performer/views/scripts/index/task-view.phtml
@@ -67,7 +67,7 @@ if (hs.addSlideshow) hs.addSlideshow({
         </div>
         <div class="col-lg-12">
            <label>Стоимость : </label>
-           <?= $this->task['customers_price'] ?> бел. рублей
+           <?= $this->task['customers_price'] ?> <?= POINT_LABEL ?>
         </div>
         <div class="col-lg-12">
            <label>Категория : </label>
