--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -547,16 +547,16 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
           
       </div>
       <!--/.row--> 
+      
     </div>
     <!--/.container--> 
   </div>
   <!--/.footer-->
   
   <div class="footer-bottom">
-    <div class="container">
-      <p class="pull-left"> &copy; HELPYOU.BY. All right reserved. </p>
-      <div class="pull-right paymentMethodImg"> </div>
-    </div>
+    
+          <?php include_once APPLICATION_PATH."/includes/web_pay.php"; ?>
+     
   </div>
   <!--/.footer-bottom--> 
 </footer>
