--- a/application/modules/admin/views/scripts/customers/view.phtml
+++ b/application/modules/admin/views/scripts/customers/view.phtml
@@ -22,6 +22,10 @@
                                
                 <strong>Возраст :</strong><?= $this->age ?>
             </div>
+            <div class="col-lg-12">
+                               
+                <strong>Зарегистрирован :</strong><?= $this->user['registred'] ?>
+            </div>
             <?php if($this->user['banned']){?>
             <div class="col-lg-12">
                 <strong>Забанен до :</strong><?= date('d.m.y', $this->user['banned']) ?>
