--- a/application/modules/admin/views/scripts/layout.phtml
+++ b/application/modules/admin/views/scripts/layout.phtml
@@ -36,6 +36,7 @@
         <nav class="blog-nav">
             
             <a class="blog-nav-item" href="<?= $this->baseUrl().'/admin/tasks/' ?>">Задачи</a>
+            <a class="blog-nav-item" href="<?= $this->baseUrl().'/admin/payment/' ?>">Платежи</a>
             <a class="blog-nav-item" href="<?= $this->baseUrl().'/admin/messages/' ?>">Сообщения</a>
             <a class="blog-nav-item" href="<?= $this->baseUrl().'/admin/comments/' ?>">Комментарии</a>
           <div class="btn-group">
