--- a/application/modules/admin/views/scripts/performers/view.phtml
+++ b/application/modules/admin/views/scripts/performers/view.phtml
@@ -26,6 +26,9 @@
             <div class="col-lg-12">
                 <strong>Возраст :</strong><?= $this->age ?>
             </div>
+            <div class="col-lg-12">
+                <strong>Зарегистрирован :</strong><?= $this->user['registred'] ?>
+            </div>
             <?php if($this->user['vk']){?>
             <div class="col-lg-12">
                 <a href="http://vk.com/id<?= $this->user['vk'] ?>">vk.com</a>
@@ -93,6 +96,7 @@
                 <li role="presentation" ><a href="#tasks" aria-controls="tasks" role="tab" data-toggle="tab">Созданные задачи</a></li>
                 <li role="presentation"><a href="#feedback" aria-controls="feedback" role="tab" data-toggle="tab">Отзывы</a></li>
                 <li role="presentation"><a href="#private" aria-controls="private" role="tab" data-toggle="tab">Личные данные</a></li>
+                <li role="presentation"><a href="#payments" aria-controls="payments" role="tab" data-toggle="tab">Платежи</a></li>
 
               </ul>
 
@@ -140,10 +144,58 @@
         $('#perTable').DataTable();
         $('#feedTable').DataTable();
         $('#cusTable').DataTable();
+        $('#paymentTable').DataTable();
     });
 
 </script>    
                 </div>
+    <div role="tabpanel" class="tab-pane" id="payments"> 
+        <?php if(!$this->payments){?>
+            <h3>Пользователь пока не осуществлял платежей</h3>
+        <?php }else{?>
+            <table id="paymentTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>ID платежа</th>
+                            
+                            <th>Сумма</th>
+                            <th>Дата</th>
+                            <th>Номер заказа</th>
+                            <th>ID транзакции</th>
+                            <th>Подпись</th>
+                        </tr>
+                    </thead>    
+
+
+                    <tbody>
+                    <?php foreach($this->payments as $payment){?>
+                        <tr>
+                            <td>
+                                <?= $payment['order_id'] ?>
+                            </td>
+                            
+                            <td>
+                                <?= $payment['amount'] ?>
+                            </td>
+                            <td>
+                                <?= date("d.m.y h:i",$payment['time']) ?>
+                            </td>
+                            <td>
+                                <?= $payment['order_num'] ?>
+                            </td>
+                            <td>
+                                <?= $payment['transaction_id'] ?>
+                            </td>
+                            <td>
+                                <?= $payment['wsb_signature'] ?>
+                            </td>
+                        </tr>
+                    <?php } ?>            
+                    </tbody>
+
+            </table> 
+        <?php } ?>
+    </div>
                 <div role="tabpanel" class="tab-pane" id="tasks">
                 <?php if(!$this->customersTasks){?>
                 <h2>Задач нет</h2>
@@ -287,6 +339,10 @@
   </div>
 </div>
 <script>
+
+        
+   
+    
   $(function() {
     $( "#bannDate" ).datepicker();
   });
