--- a/application/modules/performer/views/scripts/payment/index.phtml
+++ b/application/modules/performer/views/scripts/payment/index.phtml
@@ -1,45 +1,312 @@
-
-    
-<form action="https://sandbox.webpay.by" method="post">
-<div class="row">
-    <div class="col-sm-4">
-        <label>Введите сумму</label>
-        <input type="text" class="form-control" name="wsb_invoice_item_price[]" >
+  <div class="row">
+    <div class="breadcrumbDiv col-lg-12">
+      <ul class="breadcrumb">
+          <li> <a href="<?= $this->baseUrl().'/performer/' ?>">Главная</a> </li>
+        <li> <a href="<?= $this->baseUrl().'/performer/user/' ?>">Личный кабинет</a> </li>
+        <li class="active"> Оплата </li>
+      </ul>
     </div>
-    <div class="col-sm-4"></div>
-    <div class="col-sm-4"></div>
-</div>
-<input type="hidden" name="*scart">
-<input type="hidden" name="wsb_version" value="2">
-<input type="hidden" name="wsb_language_id" value="russian">
-<input type="hidden" name="wsb_storeid" value="<?= $this->wsb_storied ?>" >
-<input type="hidden" name="wsb_store" value="<?= $this->wsb_store ?>" >
-<input type="hidden" name="wsb_order_num" value="<?= $this->wsb_order_num ?>" >
-<input type="hidden" name="wsb_test" value="1" >
-<input type="hidden" name="wsb_currency_id" value="BYR" >
-<input type="hidden" name="wsb_seed" value="<?= $this->wsb_seed ?>">
-<input type="hidden" name="wsb_return_url" value="<?= $this->wsb_return_ur ?>">
-<input type="hidden" name="wsb_cancel_return_url" value="<?= $this->wsb_cancel_return_url ?>">
-<input type="hidden" name="wsb_notify_url" value="<?= $this->baseUrl().'/performer/payment/notify'; ?>">
-<input type="hidden" name="wsb_email" value="<?= 1 ?>" >
-<input type="hidden" name="wsb_phone" value="<?= 1 ?>" >
-<input type="hidden" name="wsb_invoice_item_name[]" value="Товар 1">
-<input type="hidden" name="wsb_invoice_item_quantity[]" value="2">
+  </div>
+<?php if($this->user){?>
+<form action="<?= PAYMENT_URL ?>" method="POST" id="paymentForm" >
+    <input type="hidden" name="*scart">
+    <input type="hidden" name="wsb_version" value="2">
+    <input type="hidden" name="wsb_language_id" value="russian">
+    <input type="hidden" name="wsb_storeid" value="<?= $this->wsb_storeid ?>" >
+    <input type="hidden" name="wsb_store" value="<?= $this->wsb_store ?>" >
+    <input type="hidden" name="wsb_order_num" value="<?= $this->wsb_order_num ?>" >
+    <input type="hidden" name="wsb_test" value="1" >
+    <input type="hidden" name="wsb_currency_id" value="BYR" >
+    <input type="hidden" name="wsb_seed" value="<?= $this->wsb_seed ?>">
+    <input type="hidden" name="wsb_return_url" value="http://<?= $this->wsb_return_url ?>">
+    <input type="hidden" name="wsb_cancel_return_url" value="http://<?= $this->wsb_cancel_return_url ?>">
+    <input type="hidden" name="wsb_notify_url" value="http://<?= $this->wsb_notify_return_url ?>">
+    <?php if($this->user['email']){?>
+        <input type="hidden" name="wsb_email" value="<?= $this->user['email'] ?>" >
+    <?php } ?>
+    <input type="hidden" name="wsb_phone" value="<?= $this->user['phonenumber'] ?>" >
+    <input type="hidden" name="wsb_invoice_item_name[]" value="Реклама">
+    <input type="hidden" name="wsb_invoice_item_quantity[]" value="<?= $this->quantity ?>">
+    <input type="hidden" name="wsb_invoice_item_price[]" value="1">
+    <input type="hidden" name="wsb_total" value="<?= $this->total ?>" >
+    <input type="hidden" name="wsb_signature" value="<?= $this->wsb_signature ?>" >
+    
+    </form>
 
 
-<input type="hidden" name="wsb_total" value="21950" >
-<input type="hidden" name="wsb_signature" value="<?= $this->wsb_signature ?>" >
-<input type="hidden" name="wsb_tax" value="1050">
-<input type="hidden" name="wsb_shipping_name" value="Стоимость доставки" >
-<input type="hidden" name="wsb_shipping_price" value="980" >
-<input type="hidden" name="wsb_discount_name" value="Скидка на товар" >
-<input type="hidden" name="wsb_discount_price" value="580" >
 <div class="row">
-<div class="col-sm-4">
-    <input type="submit" value="Купить" class="btn btn-primary">
-</div>
-<div class="col-sm-4"></div>
-<div class="col-sm-4"></div>
-</div>
-</form>
-</div>
+    <div class="col-lg-9 col-md-9 col-sm-7">
+      <h1 class="section-title-inner">
+          <span>
+              <i class="glyphicon glyphicon-hand-right"></i>
+              Подтверждение
+          </span>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-5 rightSidebar">
+      <h4 class="caps">
+          <a href="<?= $this->baseUrl().'/performer/user/' ?>">
+              <i class="fa fa-chevron-left"></i> 
+              В личный кабинет 
+          </a>
+      </h4>
+    </div>
+  </div> <!--/.row-->
+  
+  <div class="row">
+    <div class="col-lg-9 col-md-9 col-sm-12">
+      <div class="row userInfo">
+        <div class="col-xs-12 col-sm-12">
+          <div class="w100 clearfix">
+            <ul class="orderStep orderStepLook2">
+              
+              <li> <a> <i class="fa  fa-tachometer  "></i> <span> Ввод суммы </span></a></li>
+              <li class="active"> <a><i class="fa  fa-check-square "> </i><span>Подтверждение</span> </a> </li>
+              <li> <a><i class="fa fa-money "> </i><span>Оплата</span></a> </li>
+            </ul>
+            <!--/.orderStep end--> 
+          </div>
+          
+          
+          <div class="w100 clearfix">
+            <div class="row userInfo">
+              <div class="col-lg-12">
+                <h2 class="block-title-2"> Подтверждение </h2>
+              </div>
+                <p>
+                   
+                </p>
+                <hr>
+
+            </div>
+              <div class="col-xs-12 col-sm-12">
+                <div class="paymentBox">
+                  <div class="panel-group paymentMethod" id="accordion">
+                    <div class="panel panel-default">
+                      <div class="panel-heading panel-heading-custom">
+                        <h4 class="panel-title">
+                            <a class="cashOnDelivery" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"> 
+                                <span class="numberCircuil">
+                                   
+                                </span> 
+                                <strong>Переход к оплате</strong> 
+                            </a> 
+                        </h4>
+                      </div>
+                      <div id="collapseOne" class="panel-collapse collapse in">
+                        <div class="panel-body">
+                            <p>
+                                Согласитесь с правилами сервиса. 
+                            </p>
+                          <br>
+                         
+                          <div class="form-group clearfix">
+                            <label class="checkbox-inline" for="checkboxes-1" >
+                              
+                              <input id="termsCheckbox"  name="terms" value="1" type="checkbox" >
+                              Я ознакомился/-лась с 
+                              <a style="text-decoration: underline" target="_blank" href="<?= $this->baseUrl().'/performer/terms/' ?>">
+                                  правилами  сервиса
+                              </a> 
+                            </label>
+                              
+                          </div>
+                          <div class="pull-right"> 
+                              <button id="submitLink" disabled class="btn btn-primary btn-small ">
+                                  Перейти к оплате &nbsp; 
+                                  <i class="fa fa-arrow-circle-right"></i>
+                              </button> 
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+
+                  </div>
+                </div>
+                
+                <!--/row--> 
+                
+              </div>
+            <!--/row end--> 
+            
+          </div>
+          <div class="cartFooter w100">
+            <div class="box-footer">
+              <div class="pull-left">
+                  <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/payment/prepay' ?>"> 
+                      <i class="fa fa-arrow-left"></i>
+                      &nbsp; Назад
+                  </a> 
+              </div>
+              <div class="pull-right"> 
+                  
+              </div>
+            </div>
+          </div>
+          <!--/ cartFooter --> 
+          
+        </div>
+      </div>
+      <!--/row end--> 
+      
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-12 rightSidebar">
+      <div class="w100 cartMiniTable">
+        <table id="cart-summary" class="std table">
+          <tbody>
+            
+            
+            <tr>
+              <td> Итоговая сумма </td>
+              <td class=" site-color" id="total-price"><?= $this->total ?></td>
+            </tr>
+          </tbody>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <!--  /cartMiniTable--> 
+      
+    </div>
+    <!--/rightSidebar--> 
+    
+  </div> <!--/row-->
+  
+  <div style="clear:both"></div>
+<?php }else{ ?>
+  <div class="row">
+    <div class="col-lg-9 col-md-9 col-sm-7">
+      <h1 class="section-title-inner">
+          <span>
+              <i class="glyphicon glyphicon-hand-right"></i>
+              Оплата
+          </span>
+      </h1>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-5 rightSidebar">
+      <h4 class="caps">
+          <a href="<?= $this->baseUrl().'/performer/user/' ?>">
+              <i class="fa fa-chevron-left"></i> 
+              В личный кабинет 
+          </a>
+      </h4>
+    </div>
+  </div> <!--/.row-->
+  
+  <div class="row">
+    <div class="col-lg-9 col-md-9 col-sm-12">
+      <div class="row userInfo">
+        <div class="col-xs-12 col-sm-12">
+          <div class="w100 clearfix">
+            <ul class="orderStep orderStepLook2">
+              
+              <li> <a> <i class="fa  fa-tachometer  "></i> <span> Ввод баллов </span></a></li>
+              <li class="active"> <a><i class="fa  fa-check-square "> </i><span>Подтверждение</span> </a> </li>
+              <li> <a><i class="fa fa-money "> </i><span>Оплата</span></a> </li>
+            </ul>
+            <!--/.orderStep end--> 
+          </div>
+          
+          
+          <div class="w100 clearfix">
+            <div class="row userInfo">
+              <div class="col-lg-12">
+                <h2 class="block-title-2"> Информация </h2>
+              </div>
+                <p>
+                    Пожалуйста вернитесь на 
+                    <a style="text-decoration: underline" href="<?= $this->baseUrl().'/performer/payment/prepay/'?>">
+                        шаг назад 
+                    </a>
+                    и введите необходимое вам количество баллов.
+                </p>
+                <hr>
+
+            </div>
+            <!--/row end--> 
+            
+          </div>
+          <div class="cartFooter w100">
+            <div class="box-footer">
+              <div class="pull-left">
+                  <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/payment/prepay' ?>"> 
+                      <i class="fa fa-arrow-left"></i>
+                      &nbsp; Назад
+                  </a> 
+              </div>
+              <div class="pull-right"> 
+                  <a class="btn btn-primary btn-small " id="sbm" disabled >
+                      Перейти к оплате &nbsp; 
+                      <i class="fa fa-arrow-circle-right"></i>
+                  </a>
+              </div>
+            </div>
+          </div>
+          <!--/ cartFooter --> 
+          
+        </div>
+      </div>
+      <!--/row end--> 
+      
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-12 rightSidebar">
+      <div class="w100 cartMiniTable">
+        <table id="cart-summary" class="std table">
+          <tbody>
+            <tr>
+              <td>Количество баллов</td>
+              <td class="price" id="pointsAmount">0</td>
+            </tr>
+            
+            <tr>
+              <td> Итоговая сумма </td>
+              <td class=" site-color" id="total-price">0</td>
+            </tr>
+          </tbody>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <!--  /cartMiniTable--> 
+      
+    </div>
+    <!--/rightSidebar--> 
+    
+  </div> <!--/row-->
+  
+  <div style="clear:both"></div>
+<?php } ?>
+<script>
+$(document).ready(function(){
+    
+    $('#termsCheckbox').change(function(){
+        if($(this).is(':checked')){
+            $('#submitLink').removeAttr("disabled");
+        }else{
+            $('#submitLink').attr("disabled","true");
+        }
+    });
+    
+    $('#submitLink').bind("click", function(){
+        $('#paymentForm').submit();
+    });
+    
+//    $('#pointsQuantity').bind('keyup', function(){
+//        var quantity = $('#pointsQuantity').val();
+//        var price = $('#price').val();
+//        if(!isNaN(quantity)){
+//            $('#inputDiv').removeClass('has-error');
+//            $('#priceError').hide();
+//            $('#sbm').attr('disabled', false);
+//            var total = quantity*price;
+//            $('#totalSum').val(total);
+//        }else{
+//            $('#totalSum').val(0);
+//            $('#inputDiv').addClass('has-error');
+//            $('#priceError').show();
+//            $('#sbm').attr('disabled', true);
+//        }
+//    });
+});
+</script>
