--- a/application/modules/performer/views/scripts/task/view.phtml
+++ b/application/modules/performer/views/scripts/task/view.phtml
@@ -40,15 +40,20 @@ if (hs.addSlideshow) hs.addSlideshow({
                                 </button>
                             <?php }else{?>
                                 <p class="text-danger">
-                                    Ниодна из ваших сфер деятельности не совпадает с категорией данной задачи.
-                                    Пожалуйста прозведите настройки категорий в личном кабинете 
-                                    либо выберите другую задачу.
+                                    Ни одна из ваших сфер деятельности не совпадает с категорией данной задачи. Пожалуйста, произведите настройки категорий в личном кабинете либо выберите другую задачу.
                                 </p>
                             <?php }?>
                     <?php }else if($this->freePoints < $taskPoints){?>
-                            <button class="btn btn-primary btn-sm"  data-toggle="modal" data-target="#notallowedModal" >
+                            <?php if($this->userHasCat){?>
+                                <button class="btn btn-primary btn-sm"  data-toggle="modal" data-target="#notallowedModal" >
                                     Предложить свою кандидатуру
                                 </button>
+                            <?php }else{?>
+                                <p class="text-danger">
+                                    Ни одна из ваших сфер деятельности не совпадает с категорией данной задачи. Пожалуйста, произведите настройки категорий в личном кабинете либо выберите другую задачу.
+                                </p>
+                            <?php }?>
+                            
                     <?php } ?>
                     <p id="propMessage<?= $this->task['id'] ?>" style="display:none" class="text-success">Заявка отправлена</p>
                 <?php }else{ ?>
@@ -82,13 +87,11 @@ if (hs.addSlideshow) hs.addSlideshow({
         <div class="col-lg-2">
            
         </div>
-        <?php if($this->task['task_image']){?>
+
         <div class="col-lg-12">
-            <a href="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="highslide" onclick="return hs.expand(this)">
-                <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
-            </a>
+
         </div>
-        
+
 <div role="tabpanel" style="padding-top: 10px">
 
   <!-- Nav tabs -->
@@ -112,7 +115,7 @@ if (hs.addSlideshow) hs.addSlideshow({
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="home">
-<?php } ?>
+<?php //} ?>
         <div class="col-lg-12">
            <label>Заказчик : </label>
            <a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$this->task['customer_id'] ?>"><?= $this->task['u_username'].' '.mb_substr($this->task['u_surname'],0,1,'utf-8').'.' ?></a>
@@ -125,7 +128,7 @@ if (hs.addSlideshow) hs.addSlideshow({
         <?php } ?>
         <div class="col-lg-12">
            <label>Стоимость : </label>
-           <?= $this->task['customers_price'] ?> бел. рублей
+           <?= $this->task['customers_price'] ?> <?= POINT_LABEL ?>
         </div>
         <div class="col-lg-12">
            <label>Категория : </label>
@@ -148,6 +151,13 @@ if (hs.addSlideshow) hs.addSlideshow({
             <label>Описание : </label>
            <?= $this->task['description'] ?>
         </div>  
+                <?php if($this->task['task_image']){?>
+        <div class="col-lg-12">
+            <a href="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="highslide" onclick="return hs.expand(this)">
+                <img src="<?= $this->baseUrl().'/images/task_images/'.$this->task['task_image'] ?>" class="img-thumbnail" width="200px">
+            </a>
+        </div>
+        <?php } ?>
               <?php if($this->feedback){?>
 
         <div class="col-lg-12">
@@ -565,13 +575,15 @@ function sendComment(){
     var comment = $('#commnetTextArea').val();
     var userId = "<?= $this->currentUser->id ?>";
     var taskId = "<?= $this->task['id'] ?>";
+    var customerId = "<?= $this->task['customer_id'] ?>";
     $.ajax({
     type: 'POST',
     url: '<?= $this->baseUrl.'/performer/comments/send-comment'; ?>',
     data: {
             comment: comment,
             userId: userId,
-            taskId: taskId
+            taskId: taskId,
+            customerId: customerId
     },
     success: function(data){
         if(data === 'true'){
@@ -711,7 +723,7 @@ function sendMessage(taskId, senderId, addressee){
         }
         });       
      }else{
-        var perfPrice = $('#per_price').val();console.log(perfPrice);
+        var perfPrice = $('#per_price').val();
         $('#propBut').hide();
         $('#prel').show();
         $.ajax({
