--- a/application/modules/performer/views/scripts/user/index.phtml
+++ b/application/modules/performer/views/scripts/user/index.phtml
@@ -1,4 +1,28 @@
-                    
+       <!-- if phone is not verified -->
+<div class="modal signUpContent fade" id="ModalSmsCode" tabindex="-1" role="dialog" >
+  <div class="modal-dialog ">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
+        <h3 class="modal-title-site text-center" > SMS код </h3>
+      </div>
+      <div class="modal-body">
+          <p>
+             Для подтверждения вашего номера введите код полученный в SMS
+          </p>
+          <input type="text" id="smsCode"><p class="text-danger" id="modalCodeError" style="display: none">Неверный код</p></br>
+          <img id="smsModalPreloader" style="display: none" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="50"></br>
+          
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Закрыть</button>
+        <button id="takeCode" class="btn btn-primary" disabled >Подтвердить</button>
+      </div>
+    </div>
+    <!-- /.modal-content --> 
+    
+  </div>
+  </div>               
     <div class="row">
         <div class="breadcrumbDiv col-lg-12">
               <ul class="breadcrumb">
@@ -68,8 +92,8 @@
       <div class="product-code"> 
           <span class="product-code">
               Баланс:</span> 
-              <span id="balSpan"><?= $this->user['balance']; ?></span> баллов
-<!--              <a class="btn btn-primary btn-xs" href="<? $this->baseUrl().'/performer/payment/index/' ?>">Пополнить баланс</a>-->
+              <span id="balSpan"><?= $this->user['balance']; ?></span> <?= POINT_LABEL ?>
+<!--              <a class="btn btn-primary btn-xs" href="<? $this->baseUrl().'/performer/payment/prepay/' ?>">Пополнить баланс</a>-->
            
       </div>
 
@@ -217,7 +241,109 @@
             <?php } ?>
         </div>
       </div>
-      
+      <div class="product-share clearfix">
+        <?php if(!$this->user['phonenumber']){?>
+          <div class="row">
+          <div class="col-sm-6">
+            <div class="form-group " id="sendSmsForm">
+               <label class="sr-only" for="phonenumber">Ваш контактный номер телефона</label>
+               <label >Ваш контактный номер телефона</label></br>
+               <div class="input-group">
+                 <div class="input-group-addon">+375</div>
+                 <input type="text" autocomplete="off" class="form-control" id="phonenumberInp" <?php if($this->user['phonenumber']){?>value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>" <?php } ?>  placeholder="Введите ваш номер телефона...">
+                 <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Получить код</div>
+               </div>
+               <img id="smsPreloader" style="display: none" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="50">
+               <p class="text-danger" id="phoneErrorTaken" style="display: none">Номер занят</p>
+               <p class="text-danger" id="phoneErrorInvalid" style="display: none">Неверный номер</p>
+             </div>
+             </div><div class="col-sm-3"></div>
+             <div class="col-sm-3"></div>
+                 
+          </div>
+             <div class="col-sm-3">
+<!--                 <button style="display: none" class="btn btn-primary btn-xs"  id="enterCodeBut">Ввести код</button>-->
+             </div>
+        <?php }else{?>
+
+            <?php if($this->user['phone_verified'] == 0){?>
+                
+                <?php if(!$this->user['pv_id']){?>
+                     <div class="row">
+                        <div class="col-sm-6">
+                          <div class="form-group " id="sendSmsForm">
+                             <label class="sr-only" for="phonenumber">Ваш контактный номер телефона</label>
+                             <label >Ваш контактный номер телефона</label></br>
+                             <div class="input-group">
+                               <div class="input-group-addon">+375</div>
+                               <input type="text" autocomplete="off" class="form-control" id="phonenumberInp" <?php if($this->user['phonenumber']){?>value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>" <?php } ?> placeholder="Введите ваш номер телефона...">
+                               <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Получить код</div>
+                             </div>
+                             <img id="smsPreloader" style="display: none" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="50">
+                             <p class="text-danger" id="phoneErrorTaken" style="display: none">Номер занят</p>
+                             <p class="text-danger" id="phoneErrorInvalid" style="display: none">Неверный номер</p>
+                           </div>
+                           </div><div class="col-sm-3"></div>
+                           <div class="col-sm-3"></div>
+
+                    </div>
+                    <div class="col-sm-3">
+<!--                        <button style="display: none" class="btn btn-primary btn-xs" id="enterCodeBut" >Ввести код</button>-->
+                    </div>
+                <?php }else{?>
+                     <div class="row">
+                        <div class="col-sm-6">
+                          <div class="form-group " id="sendSmsForm">
+                             <label class="sr-only" for="phonenumber">Ваш контактный номер телефона</label>
+                             <label >Ваш контактный номер телефона</label></br>
+                             <div class="input-group">
+                               <div class="input-group-addon">+375</div>
+                               <input type="text" autocomplete="off" class="form-control" id="phonenumberInp" <?php if($this->user['phonenumber']){?>value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>" <?php } ?> placeholder="Введите ваш номер телефона...">
+                               <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Получить код</div>
+                             </div>
+                             <img id="smsPreloader" style="display: none" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="50">
+                             <p class="text-danger" id="phoneErrorTaken" style="display: none">Номер занят</p>
+                             <p class="text-danger" id="phoneErrorInvalid" style="display: none">Неверный номер</p>
+                           </div>
+                           </div><div class="col-sm-3"></div>
+                           <div class="col-sm-3"></div>
+
+                    </div>
+                    <div class="col-sm-3">
+<!--                        <button style="display: none"  class="btn btn-primary btn-xs" id="enterCodeBut" >Ввести код</button>-->
+                    </div>
+                <?php }?>
+            <?php }else{ ?>
+                <img id="verificatePhone" data-toggle="tooltip" data-placement="left" title="Телефон верифицирован"  width="40px" src="<?= $this->baseUrl().'/ico/phone.png' ?>" >
+                <a id="changePhoneLink">Сменить номер телефона</a>
+                
+                <div id="divChangePhone" style="display: none">
+                    <div class="row">
+                        <div class="col-sm-6">
+                          <div class="form-group " id="sendSmsForm">
+                             <label class="sr-only" for="phonenumber">Ваш контактный номер телефона</label>
+                             <label >Ваш контактный номер телефона</label></br>
+                             <div class="input-group">
+                               <div class="input-group-addon">+375</div>
+                               <input type="text" autocomplete="off" class="form-control" id="phonenumberInp" <?php if($this->user['phonenumber']){?>value="<?= mb_substr($this->user['phonenumber'], 3, 10,'utf-8')?>" <?php } ?> placeholder="Введите ваш номер телефона...">
+                               <div id="sendSmsButton" style="display: none; background-color:#4ec67f" class="input-group-addon btn">Получить код</div>
+                             </div>
+                             <img id="smsPreloader" style="display: none" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="50">
+                             <p class="text-danger" id="phoneErrorTaken" style="display: none">Номер занят</p>
+                             <p class="text-danger" id="phoneErrorInvalid" style="display: none">Неверный номер</p>
+                           </div>
+                           </div><div class="col-sm-3"></div>
+                           <div class="col-sm-3"></div>
+
+                    </div>
+                    <div class="col-sm-3">
+<!--                        <button style="display: none" class="btn btn-primary btn-xs" id="enterCodeBut" >Ввести код</button>-->
+                    </div>
+                </div>
+            <?php } ?>
+        
+        <?php } ?>
+              </div>        
     </div><!--/ right column end -->
 
   </div>
@@ -232,8 +358,10 @@
     <?php if($this->userPrepositions){?>
         <li role="presentation"><a href="#app" aria-controls="app" role="tab" data-toggle="tab">Мои заявки</a></li>
     <?php } ?>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Настройки</a></li>
-    
+        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Мой профиль</a></li>
+    <?php if($this->payments){?>
+        <li role="presentation"><a href="#payments" aria-controls="payments" role="tab" data-toggle="tab">Платежи</a></li>
+    <?php } ?>
    
   </ul>
 
@@ -257,7 +385,7 @@
                     <tr>
                         <td><a style="font-weight: bold" href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"><?= $task['title'] ?></a></td>
                         <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$task['customer_id'] ?>"><?= $task['u_username'].' '.mb_substr($task['u_username'], 0, 1, 'utf-8') ?></a></td>
-                        <td><?= $task['customers_price'] ?> бел. рублей</td>
+                        <td><?= $task['customers_price'] ?> <?= POINT_LABEL ?></td>
                         <td><?= date('d.m.Y', $task['final_date']) ?></td>
                         <td>
                             <?php switch($task['status']){
@@ -279,6 +407,50 @@
          </tbody>
         </table>       
        
+    </div>
+    <div role="tabpanel" class="tab-pane" id="payments">
+        <table id="paymentTable" class="table table-striped table-bordered table-responsive" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Дата</th>
+                        <th>ID платежа</th>
+                        <th>Сумма</th>
+                        
+                        <th>Номер заказа</th>
+                    </tr>
+                </thead>    
+
+
+                <tbody>
+                <?php foreach($this->payments as $payment){?>
+                    <tr>
+                        <td>
+                            <a href="<?= $this->baseUrl().'/performer/payment/success/?wsb_order_num='.$payment['order_num'].'&wsb_tid='.$payment['transaction_id'] ?>">
+                                <?= date("d.m.y H:i",$payment['time']) ?>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="<?= $this->baseUrl().'/performer/payment/success/?wsb_order_num='.$payment['order_num'].'&wsb_tid='.$payment['transaction_id'] ?>">
+                                <?= $payment['order_id'] ?>
+                            </a>
+                        </td>
+                        
+                        <td>
+                            <a href="<?= $this->baseUrl().'/performer/payment/success/?wsb_order_num='.$payment['order_num'].'&wsb_tid='.$payment['transaction_id'] ?>">
+                                <?= $payment['amount'] ?>
+                            </a>
+                        </td>
+                        
+                        <td>
+                            <a href="<?= $this->baseUrl().'/performer/payment/success/?wsb_order_num='.$payment['order_num'].'&wsb_tid='.$payment['transaction_id'] ?>">
+                            <?= $payment['order_num'] ?>
+                            </a>    
+                        </td>
+                        
+                <?php } ?>            
+                </tbody>
+
+        </table>  
     </div>
     <div role="tabpanel" class="tab-pane" id="tasks">
        
@@ -313,8 +485,8 @@
                     
                     <?php } ?>
                 </td>
-                <td><?=  date('H:i d-m-Y', $task['created_at'])?></td>
-                <td><?= date('H:i d-m-Y', $task['final_date']) ?></td>
+                <td><?=  date('d-m-Y H:i', $task['created_at'])?></td>
+                <td><?= date('d-m-Y H:i', $task['final_date']) ?></td>
                 <td>
                   <?php switch($task['status']){
                          case "non_taken":
@@ -353,14 +525,20 @@
             <tr>
                 <th>Задача</th>
                 <th>Заказчик</th>
+                <th>Удалить</th>
+                
             </tr>
         </thead>    
 
         <tbody>
             <?php foreach($this->userPrepositions as $prep){?>
-            <tr >
+            <tr id="prep<?= $prep['id'] ?>" >
                 <td><a href="<?= $this->baseUrl().'/performer/task/view/id/'.$prep['t_id']?>"><?= $prep['t_title'] ?></a></td>
-                <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$prep['t_customer_id'] ?>"><?= $prep['cust_username'].' '.mb_substr($prep['cust_surname'], 0, 1, 'utf-8') ?></td>
+                <td><a href="<?= $this->baseUrl().'/performer/customer/view/id/'.$prep['t_customer_id'] ?>"><?= $prep['cust_username'].' '.mb_substr($prep['cust_surname'], 0, 1, 'utf-8') ?></a></td>
+                <td>
+                    <a id="but<?= $prep['id'] ?>" class="btn btn-primary btn-xs" onclick="removePreposition(<?= $prep['id'] ?>)">Отменить заявку</a>
+                    <img id="prel<?= $prep['id'] ?>" src="<?= $this->baseUrl().'/images/blue_preloader.gif' ?>" width="40" style="display: none">
+                </td>
                 
             </tr>
             <?php } ?>
@@ -422,8 +600,67 @@
 <script>
 $(document).ready(function(){
 
-    $('#table').DataTable();
+    $('#takeCode').bind('click', function(){
+        var code = $('#smsCode').val();
+        $('#smsModalPreloader').show();
+        verifyPhone(code);
+    });
 
+   $('#enterCodeBut').bind("click",function(){
+       $('#smsModalPreloader').hide();
+       $('#modalCodeError').hide();
+       $('#smsCode').val('');
+       $('#ModalSmsCode').modal('show');
+   });
+
+       $('#smsCode').bind('keyup', function(){
+        var codeLng = $('#smsCode').val().length;
+        if(codeLng == 6){
+            $('#takeCode').removeAttr("disabled");
+        }
+    });
+
+   $('#changePhoneLink').bind('click', function(){
+       
+       $('#verificatePhone').toggle();
+       $('#divChangePhone').toggle();
+   }); 
+
+ var phonenumber = $('#phonenumberInp').val();
+    var numberLng = phonenumber.length;
+    if(numberLng == 9){
+        $('#sendSmsButton').show();
+        $('#enterCodeBut').show();
+    }else{
+        $('#sendSmsButton').hide();
+        $('#enterCodeBut').hide();
+    }
+    $('#phonenumberInp').bind("keyup", function(){
+        var phonenumber = $('#phonenumberInp').val();
+        var numberLng = phonenumber.length;
+        if(numberLng == 9){
+//           checkPhoneForUniq(phonenumber);
+            $('#sendSmsButton').show();
+            $('#enterCodeBut').show();
+    
+        }else{
+            $('#sendSmsButton').hide();
+            $('#enterCodeBut').hide();
+        }
+    });
+
+$('#sendSmsButton').bind('click', function(){  
+
+        $('#sendSmsButton').hide();
+        $('#smsPreloader').show();
+        var phoneVal = $('#phonenumberInp').val();
+        editUser(phoneVal, <?= $this->user['id'] ?>);
+        sendSms('375'+phoneVal, <?= $this->user['id'] ?>);
+
+});
+
+    $('#table').DataTable();
+$('#paymentTable').DataTable();
     $( "#bi" ).datepicker();
 $('#imageInput').change(function(){
    $('#avatarForm').submit();
@@ -450,6 +687,90 @@ $('#email_input').bind("keyup",function(){
 
 }); 
 
+function removePreposition(id){
+    if(confirm('Отменить заявку?')){
+        $('#but'+id).hide();
+        $('#prel'+id).show();
+            $.ajax({
+            type: 'POST',
+            url: '<?= $this->baseUrl.'/performer/task/remove-preposition'; ?>',
+            data: {id: id},
+            success: function(data){
+                $('#prep'+id).hide();
+          }
+        });
+    }
+}
+
+function verifyPhone(code){
+    $.ajax({
+        type: 'POST',
+        url: '<?= $this->baseUrl.'/phone-activation/activate-account'; ?>',
+        data: {code: code},
+        success: function(data){
+           data = JSON.parse(data);
+           if(data.code == 'false'){
+               $('#smsModalPreloader').hide();
+               $('#modalCodeError').show();
+           }else if(data.code == '1'){
+                $.ajax({
+                        type: 'POST',
+                        url: '<?= $this->baseUrl.'/phone-activation/activate'; ?>',
+                        data: {code: code},
+                        success: function(data){
+                            location.reload();
+                         }
+                     });
+           }
+         }
+     });
+}
+
+function editUser(phoneNumber, userId){
+
+    $.ajax({
+        type: 'POST',
+        url: '<?= $this->baseUrl.'/registration/edit-user'; ?>',
+        data: {phoneNumber: phoneNumber, userId: userId},
+        success: function(data){console.log(phoneNumber);
+            if(data === 'true'){
+
+            }
+            
+         }
+     });
+     };
+ 
+function sendSms(phoneNumber, userId){
+    $.ajax({
+        type: 'POST',
+        url: '<?= $this->baseUrl.'/sms/phone-verify'; ?>',
+        data: {phoneNumber: phoneNumber, userId: userId},
+        success: function(data){
+            if(data == 'true'){
+                $('#ModalSmsCode').modal('show');
+                $('#smsPreloader').hide();
+//                setTimeout(function() {
+                    $('#sendSmsButton').show();
+//                }, 60000);
+                
+            }else if(data == -4){
+                $('#smsPreloader').hide();
+                $('#phoneErrorInvalid').show();
+                $('#phoneErrorInvalid').fadeOut(3000);
+                $('#sendSmsButton').show();
+            }else if(data == -10){
+                $('#smsPreloader').hide();
+                $('#phoneError').show();
+                $('#phoneError').fadeOut(1000);
+                $('#sendSmsButton').show();
+            }
+            
+         }
+     });
+     } 
+     
+     
 $(function () {
   $('[data-toggle="tooltip"]').tooltip();
 }); 
